增加tomcat安装